--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,8 @@
         <shrinkwrap-api.version>1.2.6</shrinkwrap-api.version>
         <junit-jupiter-api.version>5.3.2</junit-jupiter-api.version>
         <truth.version>0.42</truth.version>
+        <spring-boot-starter-web.version>2.1.1.RELEASE</spring-boot-starter-web.version>
+        <spring-boot-starter-test.version>2.1.1.RELEASE</spring-boot-starter-test.version>
     </properties>
 
     <dependencyManagement>
@@ -292,6 +294,23 @@
                 <artifactId>truth</artifactId>
                 <version>${truth.version}</version>
             </dependency>
+
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>${spring-boot-starter-web.version}</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <version>${spring-boot-starter-test.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+
         </dependencies>
     </dependencyManagement>
     <build>
