--- a/bisca-rest-api/pom.xml
+++ b/bisca-rest-api/pom.xml
@@ -221,7 +221,11 @@
             <scope>test</scope>
         </dependency>
 
-
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.activemq.tooling</groupId>
