--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,13 @@
     </modules>
 
     <properties>
+        <java.version>1.8</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler>3.5.1</maven.compiler>
         <jersey-bundle.version>1.19.1</jersey-bundle.version>
         <jersey-server.version>2.23</jersey-server.version>
         <maven.compiler>3.5.1</maven.compiler>
-        <java.version>1.8</java.version>
         <jackson.core>2.7.3</jackson.core>
         <owasp.esapi>2.1.0.1</owasp.esapi>
         <auth0>2.1.0</auth0>
@@ -41,20 +41,29 @@
         <weld.servlet>2.3.2.Final</weld.servlet>
         <project.lombok>1.18.4</project.lombok>
         <cucumber.version>1.2.4</cucumber.version>
-        <activemq-all.version>5.13.3</activemq-all.version>
+        <activemq-all.version>5.15.8</activemq-all.version>
         <shrinkwrap-resolver-bom.version>2.2.2</shrinkwrap-resolver-bom.version>
         <shrinkwrap-api.version>1.2.6</shrinkwrap-api.version>
         <arquillian-weld-ee-embedded-1.1.version>1.1.2.Final</arquillian-weld-ee-embedded-1.1.version>
         <javaee-api.version>7.0</javaee-api.version>
         <javax.ejb-api.version>3.2</javax.ejb-api.version>
-        <activemq-client.version>5.15.7</activemq-client.version>
         <arquillian-container-test-api.version>1.1.7.Final</arquillian-container-test-api.version>
         <shrinkwrap-api.version>1.2.6</shrinkwrap-api.version>
         <junit-jupiter-api.version>5.3.2</junit-jupiter-api.version>
         <truth.version>0.42</truth.version>
+        <hibernate-core.version>5.2.12.Final</hibernate-core.version>
+        <h2.version>1.4.196</h2.version>
+        <jetty.version>8.1.16.v20140903</jetty.version>
+        <maven.compiler>3.5.1</maven.compiler>
+        <glassfish-embedded-all.version>3.1.2</glassfish-embedded-all.version>
+        <jboss-javaee-6.0.version>1.0.0.Final</jboss-javaee-6.0.version>
+        <maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
+        <spring-orm.version>5.1.3.RELEASE</spring-orm.version>
+        <spring-core.version>5.1.3.RELEASE</spring-core.version>
         <spring-boot-starter-web.version>2.1.1.RELEASE</spring-boot-starter-web.version>
         <spring-boot-starter-test.version>2.1.1.RELEASE</spring-boot-starter-test.version>
         <spring-boot-starter-data-jpa.version>2.1.1.RELEASE</spring-boot-starter-data-jpa.version>
+        <spring-boot-starter-tomcat.version>2.1.1.RELEASE</spring-boot-starter-tomcat.version>
     </properties>
 
     <dependencyManagement>
@@ -76,6 +85,29 @@
                 <groupId>jesperancinha</groupId>
                 <artifactId>bisca-rest-api-test</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-core</artifactId>
+                <version>${hibernate-core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-orm</artifactId>
+                <version>${spring-orm.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>${h2.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.tomcat</groupId>
+                <artifactId>tomcat-dbcp</artifactId>
+                <version>9.0.1</version>
             </dependency>
 
             <!-- Javax Persistence -->
@@ -218,7 +250,17 @@
             <dependency>
                 <groupId>org.apache.activemq</groupId>
                 <artifactId>activemq-client</artifactId>
-                <version>${activemq-client.version}</version>
+                <version>${activemq-all.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>ch.qos.logback</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <!-- TEST Libraries -->
@@ -239,47 +281,48 @@
                 <groupId>org.apache.activemq</groupId>
                 <artifactId>activemq-all</artifactId>
                 <version>${activemq-all.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>ch.qos.logback</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <dependency>
                 <groupId>org.apache.activemq.tooling</groupId>
                 <artifactId>activemq-junit</artifactId>
                 <version>${activemq-all.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>ch.qos.logback</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <dependency>
                 <groupId>org.apache.activemq</groupId>
                 <artifactId>activemq-broker</artifactId>
                 <version>${activemq-all.version}</version>
-            </dependency>
-
-            <!-- Arquillian -->
-            <dependency>
-                <groupId>org.jboss.arquillian.container</groupId>
-                <artifactId>arquillian-container-test-api</artifactId>
-                <version>${arquillian-container-test-api.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.jboss.arquillian.junit</groupId>
-                <artifactId>arquillian-junit-core</artifactId>
-                <version>${arquillian-container-test-api.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.jboss.arquillian.core</groupId>
-                <artifactId>arquillian-core-impl-base</artifactId>
-                <version>${arquillian-container-test-api.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.shrinkwrap</groupId>
-                <artifactId>shrinkwrap-api</artifactId>
-                <version>${shrinkwrap-api.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.arquillian.test</groupId>
-                <artifactId>arquillian-test-impl-base</artifactId>
-                <version>${arquillian-container-test-api.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>ch.qos.logback</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
@@ -318,6 +361,18 @@
                 <version>${spring-boot-starter-test.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-tomcat</artifactId>
+                <version>${spring-boot-starter-tomcat.version}</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-core</artifactId>
+                <version>${spring-core.version}</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
