--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,9 @@
         <spring-boot-starter-test.version>2.1.1.RELEASE</spring-boot-starter-test.version>
         <spring-boot-starter-data-jpa.version>2.1.1.RELEASE</spring-boot-starter-data-jpa.version>
         <spring-boot-starter-tomcat.version>2.1.1.RELEASE</spring-boot-starter-tomcat.version>
+        <hibernate-validator.version>5.3.4.Final</hibernate-validator.version>
+        <javax.el-api.version>2.2.4</javax.el-api.version>
+        <javax.el.version>2.2.4</javax.el.version>
     </properties>
 
     <dependencyManagement>
@@ -372,6 +375,22 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
                 <version>${spring-core.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-validator</artifactId>
+                <version>${hibernate-validator.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.el</groupId>
+                <artifactId>javax.el-api</artifactId>
+                <version>${javax.el-api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.web</groupId>
+                <artifactId>javax.el</artifactId>
+                <version>${javax.el.version}</version>
             </dependency>
 
         </dependencies>
