JE-BJE-00001 Refactoring - Removes uneccessary unit test - Moves entities to datamodel - Refactors obsolete unit tests

--- a/bisca-model/pom.xml
+++ b/bisca-model/pom.xml
@@ -47,6 +47,16 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
