JE-BJE-00001 Major refactoring merges interfaces and entities

--- a/bisca-model/pom.xml
+++ b/bisca-model/pom.xml
@@ -41,6 +41,12 @@
     </build>
 
     <dependencies>
+
+        <dependency>
+            <groupId>jesperancinha</groupId>
+            <artifactId>bisca-api</artifactId>
+        </dependency>
+
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
