Dependency update to new groupId org.jesperancinha.biscaje

--- a/biscaje-model/pom.xml
+++ b/biscaje-model/pom.xml
@@ -40,8 +40,8 @@
     <dependencies>
 
         <dependency>
-            <groupId>jesperancinha</groupId>
-            <artifactId>bisca-api</artifactId>
+            <groupId>org.jesperancinha.biscaje</groupId>
+            <artifactId>biscaje-api</artifactId>
         </dependency>
 
         <!-- Lombok -->
