--- a/biscaje-rest-api/pom.xml
+++ b/biscaje-rest-api/pom.xml
@@ -44,13 +44,13 @@
     <dependencies>
         <!-- BiscaJE -->
         <dependency>
-            <groupId>jesperancinha</groupId>
-            <artifactId>bisca-model</artifactId>
+            <groupId>org.jesperancinha.biscaje</groupId>
+            <artifactId>biscaje-model</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>jesperancinha</groupId>
-            <artifactId>bisca-api</artifactId>
+            <groupId>org.jesperancinha.biscaje</groupId>
+            <artifactId>biscaje-api</artifactId>
         </dependency>
 
         <dependency>
