--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,9 @@
     </modules>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <java.version>17</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <maven.compiler>3.8.1</maven.compiler>
         <jersey-bundle.version>1.19.1</jersey-bundle.version>
         <jersey-server.version>2.23</jersey-server.version>
