--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>biscaje</artifactId>
     <version>1.0.0</version>
 
-    <name>O jogo da bisca/briscola</name>
+    <name>BiscaJE :: Parent</name>
     <url>http://maven.apache.org</url>
 
     <modules>
@@ -73,18 +73,6 @@
                 <version>${spring-boot-starter-parent.version}</version>
                 <scope>import</scope>
                 <type>pom</type>
-            </dependency>
-            <!-- bisca model -->
-            <dependency>
-                <groupId>org.jesperancinha.biscaje</groupId>
-                <artifactId>biscaje-model</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <!-- bisca api -->
-            <dependency>
-                <groupId>org.jesperancinha.biscaje</groupId>
-                <artifactId>biscaje-api</artifactId>
-                <version>${project.version}</version>
             </dependency>
             <!-- bisca rest -->
             <dependency>
