--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,8 @@
-# Java Maven CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-java/ for more details
-#
 version: 2
 jobs:
   build:
-    docker:
-      # specify the version you desire here
-      - image: cimg/openjdk:17.0
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
+    machine:
+      image: ubuntu-2004:202010-01
 
     working_directory: ~/repo
 
@@ -23,14 +13,28 @@ jobs:
     steps:
       - checkout
 
-      - run: mvn clean install
+      - run:
+          name: Install SDK 17
+          command: wget https://download.java.net/java/GA/jdk17.0.2/dfd4a8d0985749f896bed50d7138ee7f/8/GPL/openjdk-17.0.2_linux-x64_bin.tar.gz &&
+            tar xvf openjdk-17.0.2_linux-x64_bin.tar.gz &&
+            sudo mv jdk-17*/ /opt/jdk17 &&
+            export JAVA_HOME=/opt/jdk17 &&
+            export PATH=$PATH:$JAVA_HOME/bin
+
+      - run:
+          name: Build
+          command: export JAVA_HOME=/opt/jdk17 &&
+              export PATH=$PATH:$JAVA_HOME/bin &&
+              mvn -B -DskipTests clean package
+
+      - run:
+          name: Test
+          command: export JAVA_HOME=/opt/jdk17 &&
+              export PATH=$PATH:$JAVA_HOME/bin &&
+              mvn test
 
       - save_cache:
           paths:
             - ~/.m2
           key: v1-dependencies-{{ checksum "pom.xml" }}
-
-      # run tests!
-      - run: mvn integration-test
-
-
+ 
